testsuite/tests/semantic_errors/invalid_assignment/test.adb
procedure Test is
   V : Integer := True;
   pragma Test_Statement;
begin
   V := 2.3;
   pragma Test_Statement;
end Test;
